--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/react-fontawesome": "0.0.20",
     "ajv": "6.4.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
@@ -11,7 +14,9 @@
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "react-test-renderer": "16.3.2",
-    "redux": "4.0.0"
+    "recompose": "^0.27.1",
+    "redux": "4.0.0",
+    "redux-actions": "^2.4.0"
   },
   "devDependencies": {
     "prettier": "^1.12.1",
